--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
     <div id="nav">
         <nav class="style">
             <a href="/">ISM Alimentação e Serviços</a> |
-            <a href="/cadastrar">Funcionarios</a> |
+            <a href="/cadastrar">Cadastrar</a> |
             <a href="">Entregas</a> |
             <a href="/funcionarios">Consultas</a>
         </nav>
