Comecei a implementar a função de alterar informações do funcionario

--- a/views/funcionarios_filtrados.handlebars
+++ b/views/funcionarios_filtrados.handlebars
@@ -11,7 +11,7 @@
         <tr>
             <td class="upercase">{{this.unidade}}</td>
             <td>{{this.id}}</td>
-            <td>{{this.nome}}</td>
+            <td>{{this.nome}} <a href="/funcionarios/{{this.unidade}}/edit/{{this.id}}">Editar</a></td>
         </tr>
         {{/each}}
     </table>
