--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,9 +10,8 @@
     <div id="nav">
         <nav class="style">
             <a href="/">ISM Alimentação e Serviços</a> |
-            <a href="/cadastrar">Cadastrar</a> |
-            <a href="">Entregas</a> |
-            <a href="/funcionarios">Consultas</a>
+            <a href="/cadastrar">Cadastrar Funcionário</a> |
+            <a href="/funcionarios">Consultar Funcionário</a>
         </nav>
     </div>
     {{{body}}}
