--- a/views/cadastrar.handlebars
+++ b/views/cadastrar.handlebars
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Cadastrar Funcionários</h1>
+    <h1 style="text-align: center;">Cadastrar Funcionários</h1>
     <form action="/funcionarios/insert" method="POST" class="form">
         <div class="form-control">
             <label for="nome">Nome:</label>
