--- a/views/filtrar_func.handlebars
+++ b/views/filtrar_func.handlebars
@@ -1,7 +1,9 @@
-<h1>Você gostaria de ver os funcionários de qual unidade?</h1>
-<form action="/funcionarios/filtro" method="POST">
-    <select name="unidade" id="">
-        <option value="sede">Sede</option>
-    </select>
-    <input type="submit" value="Pesquisar">
-</form>
+<h1 style="text-align: center;">Você gostaria de ver os funcionários de qual unidade?</h1>
+<div id="select_und">
+    <form class="select" action="/funcionarios/filtro" method="POST">
+        <select name="unidade" id="">
+            <option value="sede">Sede</option>
+        </select>
+        <input type="submit" value="Pesquisar">
+    </form>
+</div>
