--- a/views/editfuncionarios.handlebars
+++ b/views/editfuncionarios.handlebars
@@ -1,2 +1,29 @@
 <!--Preciso implementar o formulário aqui, para reenviar as informações para uma rota de post, e fazer o UPDATE!-->
-<h1>Funcionalidade em desenvolvimento...</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+    <h1 style="text-align: center;">Cadastrar Funcionários</h1>
+    <form action="/funcionarios/update" method="POST" class="form">
+        <!--Input hidden apenas pra eu receber o id do user na rota de post!-->
+        <input type="hidden" name="id" value="{{user.id}}">
+        <div class="form-control">
+            <label for="nome">Nome:</label>
+            <input type="text" name="nome" value="{{user.nome}}">
+        </div>
+
+        <div class="form-control">
+            <label for="unidade">Unidade:</label>
+            <select name="unidade" id="">
+                <option value="sede">Sede</option>
+            </select>
+        </div>
+        <input type="submit" value="Atualizar">
+    </form>
+</body>
+</html> 
